# ssh-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat  install.ps1  install.sh
src/: main.cpp  ssh_manager.cpp  ssh_manager.h
